@@ -37,7 +37,7 @@ use File::Basename;
 use Getopt::Long;
 use Pod::Usage;
 
-my $VERSION = "20191001";
+my $VERSION = "20191021";
 
 parse_commandline();
 
@@ -421,7 +421,7 @@ See the GNU General Public License for more details.
 
 =head1 VERSION
 
-This document describes B<afm2afm> version 20191001.
+This document describes B<afm2afm> version 20191021.
 
 
 =head1 RECENT CHANGES
